set up base navbar
base navbar for new react changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
     <div
   data-react-root="NavBar"
   data-props='{
-    "brand":{"text":"Halabytes","href":"/"},
+    "brand":{"text":"Halalbytes","href":"/"},
     "links":[{"label":"Restaurants","href":"/restaurants"},{"label":"Request","href":"/request"}],
     "auth":{"label":"Sign in","href":"/signin"},
     "logo":"🍽️"
