--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,27 +6,17 @@
     <title>HalalBytes</title>
     <%= favicon_link_tag 'HalalBytes.ico' %>
     <%= csrf_meta_tags %>
-    <%= javascript_importmap_tags %>
-    <%= stylesheet_link_tag "application" %>
+
+    <!-- 3rd-party styles you actually use -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     <link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet">
     <link href="https://unpkg.com/dropzone@6.0.0-beta.1/dist/dropzone.css" rel="stylesheet" type="text/css" />
+
+    <!-- Global app CSS first -->
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <!-- Tailwind (your build output) second -->
     <%= stylesheet_link_tag "halabytes_react", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "halabytes_react", "data-turbo-track": "reload", defer: true %>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CJM0VENVMF"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-CJM0VENVMF');
-    </script>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
   <body>
     <% flash.each do |key, value| %>
@@ -38,76 +28,74 @@
     <% end %>
     <% flash.each do |key, value| %>
       <% if key.to_s == 'error' %>
-        <div class="alert alert-dark fixed-top start-50 translate-middle-x" style="margin-top: 80px; width: fit-content; max-width: 100%; background-color: rgba(255, 0, 0, 0.5);
-          color: white;" role="alert">
+        <div class="alert alert-dark fixed-top start-50 translate-middle-x" style="margin-top: 80px; width: fit-content; max-width: 100%; background-color: rgba(255, 0, 0, 0.5); color: white;" role="alert">
           <%= value %>
         </div>
       <% end %>
     <% end %>
+
+    <!-- Fixed NavBar (React) -->
     <div
-  data-react-root="NavBar"
-  data-props='{
-    "brand": { "text": "Halalbytes", "href": "<%= root_path %>" },
-    "links": [
-      { "label": "Restaurants", "href": "<%= restaurants_index_path %>" },
-      { "label": "Request", "href": "<%= request_new_restaurants_path %>" }
-    ],
-    "auth": {
-      "label": <%= user_signed_in? ? "\"Account\"" : "\"Sign in\"" %>,
-      "href": "<%= user_signed_in? ? edit_user_registration_path : new_user_session_path %>"
-    },
-    "logoSrc": "<%= asset_path("halalbytes-logo-w.png") %>"
-  }'
-></div>
+      data-react-root="NavBar"
+      data-props='<%= {
+        brand: { text: "HalalBytes", href: root_path },
+        links: [
+          { label: "Restaurants", href: restaurants_index_path },
+          { label: "Requests",     href: request_new_restaurants_path }],
+        auth:  { label: "Sign in", href: user_signed_in? ? edit_user_registration_path : new_user_session_path },
+        logoSrc: asset_path("halalbytes-logo-w.png"),
+        showBrandText: true,
+        showAuthIcon: true
+      }.to_json %>'>
+    </div>
 
     <%= yield %>
+
+    <!-- 3rd-party JS you actually use -->
+    <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+
+    <!-- Your esbuild JS bundle (mounts React components) -->
+    <%= javascript_include_tag "halabytes_react", "data-turbo-track": "reload", defer: true %>
+
+    <!-- Flash auto-dismiss scripts (INSIDE body, before </body>) -->
+    <script>
+      document.addEventListener("turbo:load", function() {
+        var notifications = document.querySelectorAll(".alert:not(#password-alert,#login-alert)");
+        if (notifications.length) {
+          setTimeout(function() {
+            notifications.forEach(function(n) {
+              n.classList.add("fade");
+              setTimeout(function() { n.remove(); }, 500);
+            });
+          }, 1500);
+        }
+      });
+    </script>
+    <script>
+      document.addEventListener("turbo:load", function() {
+        var notifications = document.querySelectorAll(".alert.error");
+        if (notifications.length) {
+          setTimeout(function() {
+            notifications.forEach(function(n) {
+              n.classList.add("fade");
+              setTimeout(function() { n.remove(); }, 500);
+            });
+          }, 2000);
+        }
+      });
+    </script>
+    <script>
+      document.addEventListener("turbo:load", function() {
+        var noticeNotifications = document.querySelectorAll(".alert.notice");
+        if (noticeNotifications.length) {
+          setTimeout(function() {
+            noticeNotifications.forEach(function(n) {
+              n.classList.add("fade");
+              setTimeout(function() { n.remove(); }, 500);
+            });
+          }, 2000);
+        }
+      });
+    </script>
   </body>
 </html>
-<script>
-  document.addEventListener("turbo:load", function() {
-    var notifications = document.querySelectorAll(".alert:not(#password-alert,#login-alert)");
-
-    if (notifications.length > 0) {
-      setTimeout(function() {
-        notifications.forEach(function(notification) {
-          notification.classList.add("fade");
-          setTimeout(function() {
-            notification.remove();
-          }, 500); // Fade-out duration (in milliseconds)
-        });
-      }, 1500); // Display duration (in milliseconds)
-    }
-  });
-</script>
-<script>
-  document.addEventListener("turbo:load", function() {
-    var notifications = document.querySelectorAll(".alert.error");
-
-    if (notifications.length > 0) {
-      setTimeout(function() {
-        notifications.forEach(function(notification) {
-          notification.classList.add("fade");
-          setTimeout(function() {
-            notification.remove();
-          }, 500); // Fade-out duration (in milliseconds)
-        });
-      }, 2000); // Display duration (in milliseconds)
-    }
-  });
-</script>
-<script>
-  document.addEventListener("turbo:load", function() {
-    var noticeNotifications = document.querySelectorAll(".alert.notice");
-
-    if (noticeNotifications.length > 0) {
-      setTimeout(function() {
-        noticeNotifications.forEach(function(notification) {
-          notification.classList.add("fade");
-          setTimeout(function() {
-            notification.remove();
-          }, 500); // Fade-out duration (in milliseconds)
-        });
-      }, 2000); // Display duration (in milliseconds) specifically for notices
-    }
-  });
-</script>
